@@ -1,3 +1,14 @@
+2006-09-11  Daniel Steffen  <das@users.sourceforge.net>
+
+	* unix/tclUnixCompat.c: make compatLock static and only declare it when
+	it will actually be used; #ifdef parts of TSD that are not always
+	needed; adjust #ifdefs to cover all possible cases; fix whitespace.
+
+2006-09-11  Andreas Kupries  <andreask@activestate.com>
+
+	* tests/msgcat.test: Bumped version in auxiliary files as well.
+	* doc/msgcat.n: 
+
 2006-09-11  Kevin Kenny  <kennykb@acm.org>
 
 	* unix/Makefile.in:	Bumped msgcat version to 1.4.2 to be
